[gd_scene load_steps=3 format=3 uid="uid://bpagh8nkmx4x7"]

[ext_resource type="Texture2D" uid="uid://cgpf1l07u07cf" path="res://art/wanderinginn_background(1).png" id="1_d217u"]
[ext_resource type="Script" path="res://menus.gd" id="1_g5nml"]

[node name="Menus" type="CanvasLayer"]
script = ExtResource("1_g5nml")
metadata/_edit_group_ = true

[node name="WanderingInnImage" type="TextureRect" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -4.0
offset_top = -74.0
offset_right = 5.0
offset_bottom = 74.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_d217u")
expand_mode = 1

[node name="Title" type="RichTextLabel" parent="WanderingInnImage"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -169.0
offset_top = 114.0
offset_right = 195.0
offset_bottom = 286.0
grow_horizontal = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 46
bbcode_enabled = true
text = "Wandering Inn: 
The Game"

[node name="Author" type="RichTextLabel" parent="WanderingInnImage"]
layout_mode = 0
offset_left = 289.0
offset_top = 241.0
offset_right = 464.0
offset_bottom = 321.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
text = "Game created by:
Alayna Montoya"

[node name="NewGameButton" type="Button" parent="WanderingInnImage"]
layout_mode = 0
offset_left = 127.0
offset_top = 422.0
offset_right = 276.0
offset_bottom = 465.0
theme_override_font_sizes/font_size = 25
text = "New Game"

[node name="LoadGameButton" type="Button" parent="WanderingInnImage"]
layout_mode = 0
offset_left = 289.0
offset_top = 422.0
offset_right = 451.0
offset_bottom = 465.0
theme_override_font_sizes/font_size = 25
text = "Load Game"

[node name="CreditsButton" type="Button" parent="WanderingInnImage"]
layout_mode = 0
offset_left = 464.0
offset_top = 422.0
offset_right = 626.0
offset_bottom = 466.0
theme_override_font_sizes/font_size = 25
text = "Credits"

[node name="CreditMenu" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -4.0
offset_top = -74.0
offset_right = 5.0
offset_bottom = 74.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_d217u")
expand_mode = 1

[node name="credits" type="RichTextLabel" parent="CreditMenu"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -169.0
offset_top = 114.0
offset_right = 195.0
offset_bottom = 286.0
grow_horizontal = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 46
bbcode_enabled = true
text = "Wandering Inn: 
The Game"

[node name="Author" type="RichTextLabel" parent="CreditMenu"]
layout_mode = 0
offset_left = 159.0
offset_top = 242.0
offset_right = 620.0
offset_bottom = 438.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
text = "The Wandering Inn Books: PirateAba

Background Image: Christian T. Arts

AI Art: Ian Rankin & Thomas Montoya

Script & Game: Alayna Montoya
"

[node name="back" type="Button" parent="CreditMenu"]
layout_mode = 0
offset_left = 289.0
offset_top = 460.0
offset_right = 451.0
offset_bottom = 503.0
theme_override_font_sizes/font_size = 25
text = "Back"

[node name="PauseMenu" type="ColorRect" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -225.0
offset_top = -111.0
offset_right = 326.0
offset_bottom = 134.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.601223, 0.601223, 0.601223, 0.643137)

[node name="Pause" type="RichTextLabel" parent="PauseMenu"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -178.5
offset_top = 210.0
offset_right = 152.5
offset_bottom = 284.0
grow_horizontal = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 46
bbcode_enabled = true
text = "Game Paused"

[node name="SaveGameButton" type="Button" parent="PauseMenu"]
layout_mode = 0
offset_left = 343.0
offset_top = 489.0
offset_right = 490.0
offset_bottom = 532.0
theme_override_font_sizes/font_size = 25
text = "Save Game"

[node name="LoadGameButton" type="Button" parent="PauseMenu"]
layout_mode = 0
offset_left = 504.0
offset_top = 489.0
offset_right = 666.0
offset_bottom = 532.0
theme_override_font_sizes/font_size = 25
text = "Load Game"

[node name="Quit" type="Button" parent="PauseMenu"]
layout_mode = 0
offset_left = 679.0
offset_top = 489.0
offset_right = 841.0
offset_bottom = 533.0
theme_override_font_sizes/font_size = 25
text = "Quit"

[node name="DeathMenu" type="ColorRect" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -225.0
offset_top = -111.0
offset_right = 326.0
offset_bottom = 134.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.601223, 0.601223, 0.601223, 0.643137)

[node name="Dead" type="RichTextLabel" parent="DeathMenu"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -178.5
offset_top = 210.0
offset_right = 152.5
offset_bottom = 284.0
grow_horizontal = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 46
bbcode_enabled = true
text = "You died.."

[node name="NewGameButton" type="Button" parent="DeathMenu"]
layout_mode = 0
offset_left = 343.0
offset_top = 490.0
offset_right = 492.0
offset_bottom = 533.0
theme_override_font_sizes/font_size = 25
text = "New Game"

[node name="LoadGameButton" type="Button" parent="DeathMenu"]
layout_mode = 0
offset_left = 504.0
offset_top = 489.0
offset_right = 666.0
offset_bottom = 532.0
theme_override_font_sizes/font_size = 25
text = "Load Game"

[node name="Quit" type="Button" parent="DeathMenu"]
layout_mode = 0
offset_left = 679.0
offset_top = 489.0
offset_right = 841.0
offset_bottom = 533.0
theme_override_font_sizes/font_size = 25
text = "Quit"

[node name="CanvasLayer" type="CanvasLayer" parent="."]
visible = false

[node name="PauseButton" type="Button" parent="CanvasLayer"]
z_index = 1
y_sort_enabled = true
offset_left = 668.0
offset_top = 20.0
offset_right = 705.0
offset_bottom = 51.0
text = "||"
metadata/_edit_use_anchors_ = true

[node name="Tutorial" type="RichTextLabel" parent="CanvasLayer"]
offset_left = 595.0
offset_top = 69.0
offset_right = 715.0
offset_bottom = 100.0
text = "WASD to move"

[connection signal="pressed" from="WanderingInnImage/NewGameButton" to="." method="_on_new_game_button_pressed"]
[connection signal="pressed" from="WanderingInnImage/LoadGameButton" to="." method="_on_load_game_button_pressed"]
[connection signal="pressed" from="WanderingInnImage/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="CreditMenu/back" to="." method="_on_load_game_button_pressed"]
[connection signal="pressed" from="CreditMenu/back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="PauseMenu/SaveGameButton" to="." method="_on_save_game_button_pressed"]
[connection signal="pressed" from="PauseMenu/LoadGameButton" to="." method="_on_load_game_button_pressed"]
[connection signal="pressed" from="PauseMenu/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="DeathMenu/NewGameButton" to="." method="_on_new_game_button_pressed"]
[connection signal="pressed" from="DeathMenu/LoadGameButton" to="." method="_on_load_game_button_pressed"]
[connection signal="pressed" from="DeathMenu/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="CanvasLayer/PauseButton" to="." method="_on_pause_button_pressed"]
